# codec_single_thread

./: .gitignore  CMakeLists.txt  Makefile  README.md  codec.cpp  codec.h  codec2.h  codec_changer.exe.stackdump  coder.cpp  coder.h  config.json  logger.h  main.cpp  md5.h  rtp.cpp  rtp.h  session.cpp  session.h  test.cpp  udp.cpp  udp.h  utils.h
codec_server/: CMakeLists.txt  codec_server.cpp  config.json
include/: amr.h  codec.h  rtp.h  sc.h  session.h  test.h  udp_packer.h  utils.h
lib/: .gitignore
src/: codec.cpp  codec2.h  event_handler.cpp  event_handler.h  jsoncpp.cpp  main.cpp  md5.cpp  rtp.cpp  rtp.h  sc.cpp  sc.h  session.cpp  session.h  test.cpp  udp.cpp  udp_packer.cpp  udp_packer.h  utils.cpp  utils.h
test/: .gitignore  CMakeLists.txt  amr.sdp  amr_wb_test.cpp  codec2_test.cpp  codec_outoforder_test.cpp  codec_test.cpp  rtp_test.cpp  test.cpp  test.json  udp_packer_test.cpp
